# job-title-normalization

./: main.py  pyproject.toml  result.csv  similarity_scores.csv  test.py
