[tool.poetry]
name = "job-title-normalization"
version = "0.1.0"
description = ""
authors = ["quynguyen2303 <nguyenphuquy2303@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.0"
transformers = "^4.41.2"
torch = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
